--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 <header><title>This is title</title></header>
 <body>
 Hello world
+ <form>
+         <button name = "button" value = "OK" type = "button">Click Me</button>
+ </form>
 </body>
 </html>
